:bug: Fix(bad css styling - overlapping paragraph)

--- a/inst/www/template_style.scss
+++ b/inst/www/template_style.scss
@@ -161,11 +161,11 @@ footer {
   padding-right: 0;
   background-color: rgba(100, 100, 100, 0.3);
   & p{
-    line-height: 0mm;
+    line-height: 4mm;
     font-size: 10pt;
     text-align: left;
-    padding-left: 3mm;
-    padding-right: 3mm;
+    padding: 0 3mm;
+    margin: 1mm;
   }
 }
 
@@ -180,7 +180,7 @@ footer {
 .headclient {
   font-size: 14pt;
   font-weight: bold;
-  padding-bottom: 2mm;
+  padding-bottom: 3mm;
   padding-top: 3mm;
   margin: 0;
 }
